[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,7 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Karan.
-<h4> I am a developer.</h4>
+         <h4> am a developer.</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
