[imad-console] Updates ui/article-one.html

--- a/ui/article-one.html
+++ b/ui/article-one.html
@@ -4,8 +4,17 @@
             Article one | Karan BHATIA
         </title>
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <style>
+            .container{
+                max-width:800px;
+                margin:0 auto;
+                color: grey;
+                font-family:sans-serif;
+            }
+        </style>
     </head>
     <body>
+      <div class = "container">
         <div>
             <a href = "/"> Home </a>
         </div>
@@ -24,6 +33,7 @@
             Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.Content for my article.
         </p>
         </div>
+      </div>
     </body>
     
     
